[package]
name = "pump-fun"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pump_fun"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = {version="0.31.1", features =["init-if-needed"]}
anchor-spl = {version = "0.31.1", features = ["metadata"]}
raydium-amm-v3 = { git = "https://github.com/raydium-io/raydium-amm-v3", features = ["cpi"] }
solana-program = "2.3.0"
spl-memo = "6.0.0"
spl-token = "8.0.0"


